--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "ripple",
   "private": true,
   "version": "0.1.0",
+  "homepage": "https://adalecki.github.io/ripple",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@types/color-convert": "^2.0.3", 
+    "@types/color-convert": "^2.0.3",
     "bootstrap": "^5.3.3",
     "color-convert": "^2.0.1",
     "d3": "^7.9.0",
@@ -40,6 +43,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
