--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "ripple",
   "private": true,
   "version": "0.1.0",
-  "homepage": "https://adalecki.github.io/ripple",
+  "homepage": "https://adalecki.github.io/ripple/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
