--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "d3": "^7.9.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
+    "ml-levenberg-marquardt": "^5.0.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-colorful": "^5.6.1",
@@ -34,6 +36,7 @@
     "@testing-library/react": "^16.1.0",
     "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-bootstrap": "^0.26.6",
