--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.24.1",
+    "use-debounce": "^10.0.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
