--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   "dependencies": {
     "@observablehq/plot": "^0.6.17",
     "@types/color-convert": "^2.0.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bootstrap": "^5.3.3",
     "color-convert": "^2.0.1",
     "d3": "^7.9.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.554.0",
     "ml-levenberg-marquardt": "^5.0.0",
-    "papaparse": "^5.5.3",
-    "react": "^18.3.1",
+    "react": "19.2.0",
     "react-bootstrap": "^2.10.4",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.0",
     "react-router-bootstrap": "^0.26.3",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^7.9.6",
     "use-debounce": "^10.0.6",
     "xlsx": "^0.18.5"
   },
@@ -40,22 +40,21 @@
     "@testing-library/react": "^16.1.0",
     "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
-    "@types/papaparse": "^5.3.16",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "@types/react-router-bootstrap": "^0.26.6",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.3.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^7.2.4"
   }
 }
